--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,10 @@ jobs:
   create_ec2_jenkins:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: ./terraform
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -25,9 +29,9 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+        uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 2.0.0
+          terraform_version: 1.0.4
           
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -37,17 +41,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: Initialize Terraform
-        run: |
-          cd /terraform/terraform init -input=false   
+        run: terraform init
+        
+      # Generates an execution plan for Terraform  
       - name: Plan Terraform
-        id: plan
         continue-on-error: true
-        run: |
-          cd /terraform/terraform plan -input=false -no-color -out=tfplan \
-          && terraform show -no-color tfplan    
-            - name: Plan Terraform
+        run: terraform plan -no-color
+
       - name: Apply Terraform 
-        id: apply
-        continue-on-error: true
-        run: |
-          cd /terraform/terraform apply
+        run: terraform apply -auto-approve
+      
