--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-region: us-east-1
+          aws-region: eu-west-3
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
@@ -50,4 +50,9 @@ jobs:
 
       - name: Apply Terraform 
         run: terraform apply -auto-approve
+      
+      - name: Execute jenkins pipeline
+        run: |
+          echo "Ejecutando el pipeline"
+      - run: echo "One last message"
       
