--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,11 +32,17 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 1.0.4
+          terraform_wrapper: false
+      
+      - name: Get outputs
+        uses: dflook/terraform-output@v1
+        id: tf-outputs
+        with:
+          path: my-terraform-config
           
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-region: eu-west-3
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
@@ -49,10 +55,12 @@ jobs:
         run: terraform plan -no-color
 
       - name: Apply Terraform 
+        id: apply
         run: terraform apply -auto-approve
       
       - name: Execute jenkins pipeline
         run: |
           echo "Ejecutando el pipeline"
-      - run: echo "One last message"
+          echo ${{ steps.apply.outputs.ec2_jenkins_server }}
+      - run: echo "Finalizando el pipeline"
       
