--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Execute jenkins pipeline
         run: |
           echo "Ejecutando el pipeline"
-          echo ${{ steps.apply.outputs.ec2_jenkins_server }}
+          ec2_jenkins_server = $(terraform output ec2_jenkins_server)
+          echo $ec2_jenkins_server
       - run: echo "Finalizando el pipeline"
       
