--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,6 @@ jobs:
           echo "Ejecutando el pipeline"
           ec2_jenkins_server=$(terraform output ec2_jenkins_server)
           echo $ec2_jenkins_server
-          curl $ec2_jenkins_server:8080/job/TFM%20NodeJS%20app%20pipeline/buildWithParameters --user cicdUser:TFM_CICD 
+          curl http://$ec2_jenkins_server:8080/job/TFM%20NodeJS%20app%20pipeline/buildWithParameters --user cicdUser:TFM_CICD 
       - run: echo "Finalizando el pipeline"
       
