--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,8 +56,7 @@ jobs:
         run: |
           echo "Ejecutando el pipeline"
           ec2_jenkins_server=$(terraform output ec2_jenkins_server)
-          echo $ec2_jenkins_server
-          echo -I http://$ec2_jenkins_server:8080/job/TFM%20NodeJS%20app%20pipeline/buildWithParameters --user cicdUser:TFM_CICD 
-          curl http://$ec2_jenkins_server:8080/job/TFM%20NodeJS%20app%20pipeline/buildWithParameters --user cicdUser:TFM_CICD 
+          echo http://${{ secrets.JENKINS_USER }}:${{ secrets.JENKINS_PASS }}@$ec2_jenkins_server:8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
+          curl -I http://${{ secrets.JENKINS_USER }}:${{ secrets.JENKINS_PASS }}@$ec2_jenkins_server:8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
       - run: echo "Finalizando el pipeline"
       
