--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,39 +24,8 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Check out code
-        uses: actions/checkout@v3
-      
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_wrapper: false
-          
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-region: eu-west-3
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
       - name: Initialize Terraform
-        run: terraform init
-        
-      # Generates an execution plan for Terraform  
-      - name: Plan Terraform
-        continue-on-error: true
-        run: terraform plan -no-color
-
-      - name: Apply Terraform 
-        id: apply
-        run: terraform apply -auto-approve
-      
-      - name: Execute jenkins pipeline
         run: |
-          echo "Ejecutando el pipeline"
-          ec2_jenkins_server=$(terraform output ec2_jenkins_server)
-          echo http://${{ secrets.JENKINS_USER }}:${{ secrets.JENKINS_PASS }}@$ec2_jenkins_server:8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
-          curl -I http://${{ secrets.JENKINS_USER }}:${{ secrets.JENKINS_PASS }}@$ec2_jenkins_server:8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
-      - run: echo "Finalizando el pipeline"
+             curl -o http://www.google.es
+             curl -I http://cicdUser:cicdUserPass@13.37.229.192:8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
       
