--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Initialize Terraform
         run: |
              curl -o http://www.google.es
-             curl -I http://cicdUser:cicdUserPass@13.37.229.192:8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
+             curl -I http://${{ secrets.JENKINS_USER }}:${{ secrets.JENKINS_PASS }}@13.37.229.192:8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
       
