--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Initialize Terraform
-        run: curl -I http://cicdUser:cicdUserPass@13.37.229.192:8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
+        run: curl -I http://${{ secrets.JENKINS_USER }}:${{ secrets.JENKINS_PASS }}@13.37.229.192:8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
       - name: End Terraform
         run: echo "adios"
       
