--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,16 +50,17 @@ jobs:
       
       # Apply execution plan for Terraform  
       - name: Apply Terraform 
-        id: apply
         run: terraform apply -auto-approve
       
       - name: Execute jenkins pipeline
         run: |
-          #ec2_jenkins_server=$(terraform output ec2_jenkins_server)
-          echo ::set-env name=EC2_IP::$(terraform output ec2_jenkins_server)
-          echo "Ejecutando el pipeline: " $EC2_IP
-          echo http:// ${{ format('{0}:{1}', secrets.JENKINS_USER, secrets.JENKINS_PASS) }} @${{ env.HELP_TEXT }} :8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
-          curl -I http://${{ format('{0}:{1}', secrets.JENKINS_USER, secrets.JENKINS_PASS) }}@${{ env.HELP_TEXT }}:8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
-          
+          ec2_jenkins_server=$(terraform output --raw ec2_jenkins_server)
+          echo "Ejecutando el pipeline: " $ec2_jenkins_server
+          echo http:// ${{ format('{0}:{1}', secrets.JENKINS_USER, secrets.JENKINS_PASS) }} @$ec2_jenkins_server :8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
+          curl -I http://${{ format('{0}:{1}', secrets.JENKINS_USER, secrets.JENKINS_PASS) }}@$ec2_jenkins_server:8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
+      
+      - name: Destroy Terraform 
+        run: terraform destroy -auto-approve
+        
       - run: echo "Finalizando el pipeline"
       
