--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,15 +26,38 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-        
-
       
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_wrapper: false
+          
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-region: eu-west-3
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  
+      # Initialize Terraform  
+      - name: Initialize Terraform
+        run: terraform init
+        
+      # Generates an execution plan for Terraform  
+      - name: Plan Terraform
+        continue-on-error: true
+        run: terraform plan -no-color
+      
+      # Apply execution plan for Terraform  
+      - name: Apply Terraform 
+        run: terraform apply -auto-approve
+   
       - name: Execute jenkins pipeline
         run: |
           ec2_jenkins_server=$(terraform output --raw ec2_jenkins_server)
           echo "Ejecutando el pipeline: " $ec2_jenkins_server
           echo http:// ${{ format('{0}:{1}', secrets.JENKINS_USER, secrets.JENKINS_PASS) }} @$ec2_jenkins_server :8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
-          curl -I http://${{ format('{0}:{1}', secrets.JENKINS_USER, secrets.JENKINS_PASS) }}@13.38.104.19:8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
+          curl -I http://${{ format('{0}:{1}', secrets.JENKINS_USER, secrets.JENKINS_PASS) }}@$(terraform output --raw ec2_jenkins_server):8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
       
       - run: echo "Finalizando el pipeline"
       
