--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
           ec2_jenkins_server=$(terraform output --raw ec2_jenkins_server)
           echo "Ejecutando el pipeline: " $ec2_jenkins_server
           echo http:// ${{ format('{0}:{1}', secrets.JENKINS_USER, secrets.JENKINS_PASS) }} @$ec2_jenkins_server :8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
-          curl -I http://${{ format('{0}:{1}', secrets.JENKINS_USER, secrets.JENKINS_PASS) }}@$(terraform output --raw ec2_jenkins_server):8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
+          curl -v -I -u ${{ format('{0}:{1}', secrets.JENKINS_USER, secrets.JENKINS_PASS) }} http://$(terraform output --raw ec2_jenkins_server):8080/job/TFM%20NodeJS%20app%20pipeline/build?token=TFM_CICD
       
       - run: echo "Finalizando el pipeline"
       
