--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,20 @@
-version: '3'
+version: '3.4'
 services:
   mongo:
-    image: mongo:3.6
+    container_name: mongo
+    image: mongo
   web:
-    build: .
+    build: 
+      context: .
+      dockerfile: ./Dockerfile
+      target: test
     ports:
-     - "3000:3000"
+     - "8080:8080"
     environment:
-     - MONGODB_URI=mongodb://mongo:27017/test 
-    links:
-     - mongo 
+       MONGODB_URI: mongodb://mongo:27017/test 
+       NODE_ENV: production     
     depends_on: 
      - mongo 
     volumes:
      - .:/starter
      - /starter/node_modules
-     
