--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "postinstall": "npm rebuild node-sass",
     "start": "node app.js",
-    "sonar-scanner": "node_modules/sonar-scanner/bin/sonar-scanner",
+    "sonar": "node sonar-project.js"
     "test": "nyc mocha --timeout=10000 --exit",
     "lint": "eslint \"**/*.js\""
   },
