--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
 # required metadata
-sonar.projectKey=com.redhat.cantas
+sonar.projectKey=hackathon-starter
 sonar.projectName=hackathon-starter
 
 sonar.projectVersion=1.0
 
-sonar.sources=./
-sonar.host.url=http://localhost:9000
+sonar.sources=.
+sonar.host.url=http://sonarqube-server:9000
 
 # The value of the property must be the key of the language.
 sonar.language=js
