--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.projectName=hackathon-starter
 sonar.projectVersion=1.0
 
 sonar.sources=.
-sonar.host.url=http://sonarqube-server:9000
+sonar.host.url=http://sonarqube:9000
 
 # The value of the property must be the key of the language.
 sonar.language=js
