--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 # required metadata
 sonar.projectKey=hackathon-starter
 sonar.projectName=hackathon-starter
+sonar.login=admin
+sonar.password=admin
 
 sonar.projectVersion=1.0
 
