--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,8 +9,9 @@ sonar.projectVersion=1.0
 sonar.sources=.
 sonar.host.url=http://localhost:9000
 
-# The value of the property must be the key of the language.
 sonar.language=js
+sonar.exclusions=node_modules/*,test/*
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # Encoding of the source code
 sonar.sourceEncoding=UTF-8
