--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.password=admin
 sonar.projectVersion=1.0
 
 sonar.sources=.
-sonar.host.url=http://localhost:9000
+sonar.host.url=http://sonarqube:9000
 
 sonar.language=js
 sonar.exclusions=node_modules/*,test/*
