--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.sources=.
 sonar.host.url=http://localhost:9000
 
 sonar.language=js
-sonar.exclusions=node_modules/*,test/*
+sonar.exclusions=node_modules/*,test/*, *.tf
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # Encoding of the source code
