--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,6 +1,5 @@
 FROM node:lts-slim
-ENV NODE_ENV=production
-RUN npm install --production
+RUN npm install 
 COPY . .
 EXPOSE 8080
 CMD ["npm", "test"]
