--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,5 +1,7 @@
 FROM node:lts-slim
-RUN npm install 
+WORKDIR /usr/src/app
+COPY package*.json ./
+RUN npm ci
 COPY . .
 EXPOSE 8080
 CMD ["npm", "test"]
