--- a/package.json
+++ b/package.json
@@ -14,47 +14,46 @@
   "scripts": {
     "postinstall": "npm rebuild node-sass",
     "start": "node app.js",
-    "sonar": "node sonar-project.js",
-    "test": "nyc mocha --timeout=10000 --exit",
-    "lint": "eslint \"**/*.js\""
+    "test": "nyc mocha --timeout=60000 --exit --reporter mocha-junit-reporter --reporter-options mochaFile=./coverage/unit-results.xml",
+	"lint": "eslint \"**/*.js\""
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@ladjs/bootstrap-social": "^7.0.2",
-    "@node-rs/bcrypt": "^1.6.0",
+    "@node-rs/bcrypt": "^1.6.1",
     "@octokit/rest": "^18.12.0",
-    "axios": "^0.26.1",
-    "body-parser": "^1.19.2",
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
     "chalk": "^5.0.1",
-    "chart.js": "^3.7.1",
-    "cheerio": "^1.0.0-rc.10",
+    "chart.js": "^3.8.0",
+    "cheerio": "^1.0.0-rc.11",
     "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.1",
     "errorhandler": "^1.5.1",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "express-flash": "^0.0.2",
-    "express-handlebars": "^6.0.3",
-    "express-session": "^1.17.2",
-    "googleapis": "^99.0.0",
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
+    "googleapis": "^102.0.0",
     "instagram-node": "^0.5.8",
     "jquery": "^3.6.0",
-    "lastfm": "^0.9.3",
-    "lob": "^6.6.0",
+    "lastfm": "^0.9.0",
+    "lob": "^6.6.2",
     "lodash": "^4.17.21",
     "lusca": "^1.7.0",
-    "mailchecker": "^4.1.14",
-    "moment": "^2.29.1",
-    "mongoose": "^6.2.8",
+    "mailchecker": "^4.1.17",
+    "moment": "^2.29.3",
+    "mongoose": "^6.3.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "node-quickbooks": "^2.0.39",
+    "node-quickbooks": "^2.0.11",
     "node-sass": "^7.0.1",
     "node-sass-middleware": "^1.0.1",
-    "nodemailer": "^6.7.3",
+    "nodemailer": "^6.7.5",
     "nodemailer-sendgrid": "^1.0.3",
-    "passport": "^0.5.2",
+    "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth": "^2.0.0",
@@ -66,29 +65,52 @@
     "passport-openid": "^0.4.0",
     "passport-snapchat": "^1.0.0",
     "passport-twitch-new": "^0.0.2",
-    "passport-twitter": "^1.0.4",
+    "passport-twitter": "^0.1.5",
     "paypal-rest-sdk": "^1.8.1",
     "popper.js": "^1.16.1",
     "pug": "^3.0.2",
-    "stripe": "^8.212.0",
+    "stripe": "^9.8.0",
     "tumblr.js": "^3.0.0",
-    "twilio": "^3.76.0",
+    "twilio": "^3.77.2",
     "twitter-lite": "^1.1.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
-    "eslint": "^8.12.0",
+    "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-chai-friendly": "^0.7.2",
-    "eslint-plugin-import": "^2.25.4",
-    "mocha": "^9.2.2",
-    "mongodb-memory-server": "^8.4.1",
+    "eslint-plugin-import": "^2.26.0",
+    "mocha": "^10.0.0",
+	"mocha-junit-reporter": "^2.0.2",
+								 
+    "mongodb-memory-server": "^8.6.1",
     "nyc": "^15.1.0",
-    "sinon": "^13.0.1",
-    "supertest": "^6.2.2"
+    "sinon": "^14.0.0",
+    "supertest": "^6.2.3"
   },
   "engines": {
     "node": ">=16"
+  },
+  "nyc": {
+    "check-coverage": true,
+	"branches": "&gt;90",
+    "lines": "&gt;90",
+    "functions": "&gt;90",
+    "statements": "&gt;90",
+    "all": true,
+    "include": [
+      "test/*.js"
+    ],
+    "exclude": [
+      "_test_/*.*"
+    ],
+    "reporter": [
+      "html",
+      "lcov",
+      "text",
+      "text-summary"
+    ],
+    "report-dir": "coverage"
   }
 }
