--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,8 +10,9 @@ sonar.sources=.
 sonar.host.url=http://localhost:9000
 
 sonar.language=js
-sonar.exclusions=node_modules/*,test/*, *.tf
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.exclusions=node_modules/*, *.tf
+sonar.javascript.lcov.reportPaths=results/lcov.info
+sonar.testExecutionReportPaths=./results/unit-results.xml
 
 # Encoding of the source code
 sonar.sourceEncoding=UTF-8
