--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,6 +12,7 @@ sonar.host.url=http://localhost:9000
 sonar.language=js
 sonar.exclusions=node_modules/*, *.tf
 sonar.javascript.lcov.reportPaths=results/lcov.info
+sonar.verbose=true
 
 # Encoding of the source code
 sonar.sourceEncoding=UTF-8
