--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,8 @@ name: Create Jenkins Instance
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  pull_request:
+  pull_request_review:
+    types: [submitted]
     branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -16,6 +17,7 @@ jobs:
   # This workflow contains a single job called "build"
   create_ec2_jenkins:
     # The type of runner that the job will run on
+    if: github.event.review.state == 'approved'
     runs-on: ubuntu-latest
     
     defaults:
