--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
   # This workflow contains a single job called "build"
   create_ec2_jenkins:
     # The type of runner that the job will run on
-    if: github.event.review.state == 'approved'
+    #if: github.event.review.state == 'approved'
     runs-on: ubuntu-latest
     
     defaults:
