--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,12 +40,28 @@ jobs:
           aws-region: eu-west-3
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  
+      
+      # Initialize Terraform  
+      - name: Initialize Terraform
+        run: terraform init
+        
+      # Generates an execution plan for Terraform  
+      - name: Plan Terraform
+        continue-on-error: true
+        run: terraform plan -no-color
+      
+      # Apply execution plan for Terraform  
+      - name: Apply Terraform 
+        run: terraform apply -auto-approve
+          var_ec2_jenkins_server=$(terraform output --raw ec2_jenkins_server)
+      
+      #execute script 
       - name: Execute jenkins pipeline
         working-directory: scripts
         run: |
+          var_ec2_jenkins_server=$(terraform output --raw ec2_jenkins_server)
           chmod +x ./launch-jenkins-job.sh 
-          ./launch-jenkins-job.sh ${{ secrets.JENKINS_USER }} ${{ secrets.JENKINS_PASS }} 35.180.87.237
+          ./launch-jenkins-job.sh ${{ secrets.JENKINS_USER }} ${{ secrets.JENKINS_PASS }} $var_ec2_jenkins_server
             
       - run: echo "Finalizando el pipeline" 
       
