--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,7 @@ jobs:
         working-directory: scripts
         run: |
           var_ec2_jenkins_server=$(terraform output --raw ec2_jenkins_server)
+          echo "ip del servidor "$var_ec2_jenkins_server
           chmod +x ./launch-jenkins-job.sh 
           ./launch-jenkins-job.sh ${{ secrets.JENKINS_USER }} ${{ secrets.JENKINS_PASS }} $var_ec2_jenkins_server
             
