--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,14 +52,15 @@ jobs:
       
       # Apply execution plan for Terraform  
       - name: Apply Terraform 
-        run: terraform apply -auto-approve
+        run: |
+          terraform apply -auto-approve
+          var_ec2_jenkins_server=$(terraform output --raw ec2_jenkins_server)
+          echo "ip del servidor "$var_ec2_jenkins_server
       
       #execute script 
       - name: Execute jenkins pipeline
         working-directory: scripts
         run: |
-          var_ec2_jenkins_server=$(terraform output --raw ec2_jenkins_server)
-          echo "ip del servidor "$var_ec2_jenkins_server
           chmod +x ./launch-jenkins-job.sh 
           ./launch-jenkins-job.sh ${{ secrets.JENKINS_USER }} ${{ secrets.JENKINS_PASS }} $var_ec2_jenkins_server
             
