--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,16 +52,17 @@ jobs:
       
       # Apply execution plan for Terraform  
       - name: Apply Terraform 
+        id: apply_terraform
         run: |
           terraform apply -auto-approve
           echo "::set-output name=var_ec2_jenkins_server::$(terraform output --raw ec2_jenkins_server)"
-          echo "ip del servidor "$var_ec2_jenkins_server
+          echo "ip del servidor "${{ steps.apply_terraform.outputs.var_ec2_jenkins_server }}
       
       #execute script 
       - name: Execute jenkins pipeline
         working-directory: scripts
         run: |
-          echo "IP "${{ steps.vars.outputs.var_ec2_jenkins_server }}
+          echo "IP "${{ steps.apply_terraform.outputs.var_ec2_jenkins_server }}
           chmod +x ./launch-jenkins-job.sh 
           ./launch-jenkins-job.sh ${{ secrets.JENKINS_USER }} ${{ secrets.JENKINS_PASS }} ${{ steps.vars.outputs.var_ec2_jenkins_server }}
             
