--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,5 +1,5 @@
 FROM node:16-buster as test
-RUN apt-get install libcurl4
+#RUN apt-get install libcurl4
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install --ci
