--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM node:lts-slim AS base
+FROM node:16-buster
 WORKDIR /usr/src/app
 COPY package*.json ./
 ARG NODE_ENV=production
@@ -7,4 +7,3 @@ RUN npm install pm2 -g
 RUN npm install --production
 COPY . .
 CMD ["pm2-runtime","app.js"]
-EXPOSE 8080
