--- a/deployment/deployment-mongo.yml
+++ b/deployment/deployment-mongo.yml
@@ -3,21 +3,16 @@ kind: Deployment
 metadata:
   name: mongo
   labels:
-    app: database
+    app: mongo
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: database
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
+      app: mongo
   template:
     metadata:
       labels:
-        app: database
+        app: mongo
     spec:
       containers:
       - image: mongo
@@ -26,3 +21,16 @@ spec:
         ports:
         - containerPort: 27017
           protocol: TCP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    name: nodejs-kubernetes-mongodb
+  name: nodejs-kubernetes-mongodb
+spec:
+  ports:
+    - port: 27017
+      targetPort: 27017
+  selector:
+    name: mongo
