--- a/deployment/deployment-web.yml
+++ b/deployment/deployment-web.yml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - env:
-         - name: MONGO_DB_URL
+         - name: MONGODB_URI
            value: mongodb://nodejs-kubernetes-mongodb:27017/nodejs-kubernetes   
       - image: https://673294157311.dkr.ecr.eu-west-3.amazonaws.com/hackathon-starter
         imagePullPolicy: Always
