--- a/deployment/deployment-web.yml
+++ b/deployment/deployment-web.yml
@@ -1,9 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hackathon-starter
-  labels:
-    app: web
+  name: web
 spec:
   replicas: 2
   selector:
@@ -25,7 +23,7 @@ spec:
            value: mongodb://nodejs-kubernetes-mongodb:27017/nodejs-kubernetes   
       - image: https://673294157311.dkr.ecr.eu-west-3.amazonaws.com/hackathon-starter
         imagePullPolicy: Always
-        name: hackathon-starter
+        name: web
         ports:
         - containerPort: 8080
           protocol: TCP
