--- a/deployment/deployment-web.yml
+++ b/deployment/deployment-web.yml
@@ -18,15 +18,14 @@ spec:
         app: web
     spec:
       containers:
-      - env:
+      - name: web
+        image: https://673294157311.dkr.ecr.eu-west-3.amazonaws.com/hackathon-starter
+        imagePullPolicy: Always
+        env:
          - name: MONGODB_URI
            value: mongodb://nodejs-kubernetes-mongodb:27017/nodejs-kubernetes   
-      - image: https://673294157311.dkr.ecr.eu-west-3.amazonaws.com/hackathon-starter
-        imagePullPolicy: Always
-        name: web
         ports:
         - containerPort: 8080
-          protocol: TCP
 ---         
 apiVersion: v1
 kind: Service
