--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: Create Jenkins Instance
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   pull_request_review:
-    types: [submitted]
+    types: [closed ]
     branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -17,7 +17,7 @@ jobs:
   # This workflow contains a single job called "build"
   create_ec2_jenkins:
     # The type of runner that the job will run on
-    #if: github.event.review.state == 'approved'
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     
     defaults:
