--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
         working-directory: scripts
         run: |
           chmod +x ./launch-jenkins-job.sh 
-          ./launch-jenkins-job.sh ${{ secrets.JENKINS_USER }} ${{ secrets.JENKINS_PASS }} ${{ steps.apply_terraform.outputs.var_ec2_jenkins_server }}
+          ./launch-jenkins-job.sh ${{ secrets.JENKINS_USER }} ${{ secrets.JENKINS_PASS }} ${{ steps.apply_terraform.outputs.var_ec2_jenkins_server }} ${{github.run_number}}
             
       # Destroy infraestructure
       - name: Destroy Terraform
